All Pages Updated Commit

--- a/DC-Breaker-32-A-63-A-Details.html
+++ b/DC-Breaker-32-A-63-A-Details.html
@@ -3,13 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tomzn DC Breaker | Dawood Trader</title>
+    <title>Tomzn DC Breakers (16A, 25A, 32A, 63A) | Dawood Trader</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+
+     <!-- SEO Meta Tags -->
+  <meta name="description" content="Dawood Trader supplies original Tomzn DC Breakers in multiple sizes including 16A, 25A, 32A, 63A and more. Reliable DC protection for solar and electrical systems." />
+  <meta name="keywords" content="Dawood Trader, Tomzn DC Breaker, DC Breaker 16A, DC Breaker 25A, DC Breaker 32A, DC Breaker 63A, Solar DC Breaker, Electrical Protection, Circuit Breaker Supplier" />
+  <meta name="author" content="Dawood Trader" />
+  <meta name="robots" content="index, follow" />
+  <meta name="language" content="en" />
+  
+  <!-- Open Graph (Facebook, LinkedIn) -->
+  <meta property="og:title" content="Tomzn DC Breakers (16A, 25A, 32A, 63A) | Dawood Trader" />
+  <meta property="og:description" content="Get original Tomzn DC Breakers – available in 16A, 25A, 32A, 63A and more at Dawood Trader. Trusted DC protection for solar systems." />
+  <meta property="og:type" content="product" />
+  <meta property="og:url" content="https://dawoodtrader.netlify.app/DC-Breaker-32-A-63-A-Details.html" />
+  <meta property="og:image" content="https://dawoodtrader.netlify.app/Images/About-us-imag.png" />
+  
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Tomzn DC Breakers (16A, 25A, 32A, 63A) | Dawood Trader" />
+  <meta name="twitter:description" content="Dawood Trader offers Tomzn DC Breakers in multiple sizes for solar and electrical use. Reliable & original products." />
+  <meta name="twitter:image" content="https://dawoodtrader.netlify.app/Images/About-us-imag.png" />
 
       <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
