--- a/Relay-Protection.html
+++ b/Relay-Protection.html
@@ -17,6 +17,29 @@
       href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+
+    <!-- SEO Meta Tags -->
+  <meta name="description" content="Dawood Trader offers Relay Protection devices including Generic Digital Voltage Relay, OMAS AVP-63, NIN Electric NP2-VAKWH, Tomzn TOB7Z-63, and Entes AVK-40A/63A. Reliable voltage and current protection for homes and industries." />
+  <meta name="keywords" content="Relay Protection, Voltage Relay, Current Relay, Digital Protection Relay, Dawood Trader, Generic Relay, OMAS AVP-63, NIN NP2-VAKWH, Tomzn TOB7Z-63, Entes AVK-40A, Entes AVK-63A, Electrical Safety Relay, Industrial Relays" />
+  <meta name="author" content="Dawood Trader" />
+  <meta name="robots" content="index, follow" />
+  <meta name="language" content="en" />
+
+  <!-- Open Graph (Facebook, LinkedIn) -->
+  <meta property="og:title" content="Relay Protection Devices | Dawood Trader" />
+  <meta property="og:description" content="Shop Relay Protection devices at Dawood Trader – Generic, OMAS, NIN Electric, Tomzn, and Entes relays available for safe electrical systems." />
+  <meta property="og:type" content="product" />
+  <meta property="og:url" content="https://dawoodtrader.netlify.app/Relay-Protection.html" />
+  <meta property="og:image" content="https://dawoodtrader.netlify.app/Images/About-us-imag.png" />
+
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Relay Protection Devices | Dawood Trader" />
+  <meta name="twitter:description" content="Dawood Trader supplies protection relays: OMAS, NIN, Tomzn, Entes, and more for reliable voltage/current protection." />
+  <meta name="twitter:image" content="https://dawoodtrader.netlify.app/Images/About-us-imag.png" />
+
+
+
       <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <link rel="shortcut icon" href="/favicon.ico" />
