--- a/Type-Change-Braker.html
+++ b/Type-Change-Braker.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dawood Trader | Tomzn AC Changeover Switch</title>
+    <title>Tomzn AC & DC Changeover Switch | Dawood Trader</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -11,12 +11,33 @@
       rel="stylesheet"
     />
 
+     <!-- SEO Meta Tags -->
+  <meta name="description" content="Buy Tomzn AC and DC Changeover Switches from Dawood Trader. Reliable switch breakers for home, solar systems, and industrial electrical safety." />
+  <meta name="keywords" content="Dawood Trader, Tomzn Changeover Switch, Tomzn AC Changeover, Tomzn DC Changeover, Changeover Breaker, AC DC Changeover Switch, Electrical Changeover, Solar Changeover Switch" />
+  <meta name="author" content="Dawood Trader" />
+  <meta name="robots" content="index, follow" />
+  <meta name="language" content="en" />
+
+  <!-- Open Graph (Facebook, LinkedIn) -->
+  <meta property="og:title" content="Tomzn AC & DC Changeover Switch | Dawood Trader" />
+  <meta property="og:description" content="Dawood Trader supplies Tomzn AC and DC Changeover Switches for reliable electrical and solar power switching. Available in multiple ratings." />
+  <meta property="og:type" content="product" />
+  <meta property="og:url" content="https://dawoodtrader.netlify.app/Type-Change-Braker.html" />
+  <meta property="og:image" content="https://dawoodtrader.netlify.app/Images/About-us-imag.png" />
+
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Tomzn AC & DC Changeover Switch | Dawood Trader" />
+  <meta name="twitter:description" content="Shop Tomzn AC & DC Changeover Switches at Dawood Trader – trusted supplier of electrical safety and solar switching solutions." />
+  <meta name="twitter:image" content="https://dawoodtrader.netlify.app/Images/About-us-imag.png" />
+
+
       <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-<link rel="manifest" href="/site.webmanifest" />
-<link rel="shortcut icon" href="Images/logo.svg" type="image/x-icon">
+      <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+      <link rel="shortcut icon" href="/favicon.ico" />
+      <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+      <link rel="manifest" href="/site.webmanifest" />
+      <link rel="shortcut icon" href="Images/logo.svg" type="image/x-icon">
 
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
