--- a/dpBox.html
+++ b/dpBox.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DB Boxes | Dawood Trader</title>
+    <title>DB Boxes (8 Way, 16 Way, 24 Way) | Dawood Trader</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,6 +17,27 @@
       href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+
+    <!-- SEO Meta Tags -->
+  <meta name="description" content="Dawood Trader supplies high-quality DB Boxes including 8 Way, 16 Way, 24 Way, and more. Durable distribution boxes for electrical systems at wholesale prices." />
+  <meta name="keywords" content="Dawood Trader, DB Box, Distribution Box, 8 Way DB Box, 16 Way DB Box, 24 Way DB Box, Electrical Distribution Box, Circuit Breaker Box, Electrical Supplier" />
+  <meta name="author" content="Dawood Trader" />
+  <meta name="robots" content="index, follow" />
+  <meta name="language" content="en" />
+  
+  <!-- Open Graph (Facebook, LinkedIn) -->
+  <meta property="og:title" content="DB Boxes (8 Way, 16 Way, 24 Way) | Dawood Trader" />
+  <meta property="og:description" content="Buy DB Boxes (8 Way, 16 Way, 24 Way) from Dawood Trader – trusted supplier of electrical distribution boxes for homes and businesses." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://dawoodtrader.netlify.app/dpbox.html" />
+  <meta property="og:image" content="https://dawoodtrader.netlify.app/Images/About-us-imag.png" />
+  
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="DB Boxes (8 Way, 16 Way, 24 Way) | Dawood Trader" />
+  <meta name="twitter:description" content="Durable and high-quality DB Boxes – 8 Way, 16 Way, 24 Way available at Dawood Trader." />
+  <meta name="twitter:image" content="https://dawoodtrader.netlify.app/Images/About-us-imag.png" />
+
 
       <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
