--- a/electronic.html
+++ b/electronic.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Electronic Products | Dawood Trader</title>
+    <title>Electronics Supply | Cooler Pumps, Heat Guns & More | Dawood Trader</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,6 +17,28 @@
       href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+
+
+    <!-- SEO Meta Tags -->
+  <meta name="description" content="Dawood Trader supplies high-quality electronic products including cooler pumps, heat guns, soldering machines, wires, cables, and more. Wholesale & retail available." />
+  <meta name="keywords" content="Dawood Trader, Electronics Supplier, Cooler Pump, Heat Gun, Soldering Iron, Electronic Tools, Wires and Cables, Wholesale Electronics, Power Tools" />
+  <meta name="author" content="Dawood Trader" />
+  <meta name="robots" content="index, follow" />
+  <meta name="language" content="en" />
+  
+  <!-- Open Graph (Facebook, LinkedIn) -->
+  <meta property="og:title" content="Electronics Supply | Cooler Pumps, Heat Guns & More | Dawood Trader" />
+  <meta property="og:description" content="Find electronic products like cooler pumps, heat guns, soldering irons, wires, and tools at Dawood Trader – trusted supplier of quality electronics." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://dawoodtrader.netlify.app/electronic.html" />
+  <meta property="og:image" content="https://dawoodtrader.netlify.app/Images/About-us-imag.png" />
+  
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Electronics Supply | Cooler Pumps, Heat Guns & More | Dawood Trader" />
+  <meta name="twitter:description" content="Dawood Trader offers electronics like cooler pumps, heat guns, soldering tools, wires, and more at wholesale & retail prices." />
+  <meta name="twitter:image" content="https://dawoodtrader.netlify.app/Images/About-us-imag.png" />
+  
 
       <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
