--- a/AC-Breaker-32-A-63-A-Details.html
+++ b/AC-Breaker-32-A-63-A-Details.html
@@ -3,13 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tomzn AC Breaker | Dawood Trader</title>
+    <title>Tomzn AC Breakers 32A & 63A | Dawood Trader</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+
+
+    <!-- SEO Meta Tags -->
+  <meta name="description" content="Dawood Trader supplies original Tomzn AC Breakers in 32A and 63A ratings. Reliable protection for home, commercial, and industrial electrical systems." />
+  <meta name="keywords" content="Dawood Trader, Tomzn AC Breaker, Tomzn 32A Breaker, Tomzn 63A Breaker, AC Circuit Breaker, MCB Breaker, Electrical Protection, Industrial Breaker" />
+  <meta name="author" content="Dawood Trader" />
+  <meta name="robots" content="index, follow" />
+  <meta name="language" content="en" />
+  
+  <!-- Open Graph (Facebook, LinkedIn) -->
+  <meta property="og:title" content="Tomzn AC Breakers 32A & 63A | Dawood Trader" />
+  <meta property="og:description" content="Get Tomzn AC Breakers in 32A and 63A sizes from Dawood Trader – trusted supplier of electrical protection products." />
+  <meta property="og:type" content="product" />
+  <meta property="og:url" content="https://dawoodtrader.netlify.app/AC-Breaker-32-A-63-A-Details.html" />
+  <meta property="og:image" content="https://dawoodtrader.netlify.app/Images/About-us-imag.png" />
+  
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Tomzn AC Breakers 32A & 63A | Dawood Trader" />
+  <meta name="twitter:description" content="Reliable Tomzn AC Breakers 32A and 63A available at Dawood Trader for homes, offices, and industries." />
+  <meta name="twitter:image" content="https://dawoodtrader.netlify.app/Images/About-us-imag.png" />
+  
 
       <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
