--- a/index.html
+++ b/index.html
@@ -3,13 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Dawood - Trader</title>
+    <title>Dawood Trader | Solar & Electronics Supplier</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+
+     <!-- SEO Meta Tags -->
+  <meta name="description" content="Dawood Trader – Reliable supplier of solar panels, inverters, batteries, and electronic products. Trusted trading solutions for businesses and projects." />
+  <meta name="keywords" content="Dawood Trader, Solar Panel Supplier, Electronics Trader, Inverters, Batteries, Wholesale Electronics, Solar Trading, Renewable Energy Supplier" />
+  <meta name="author" content="Dawood Trader" />
+  <meta name="robots" content="index, follow" />
+  <meta name="language" content="en" />
+  
+  <!-- Open Graph (Facebook, LinkedIn) -->
+  <meta property="og:title" content="Dawood Trader | Solar & Electronics Supplier" />
+  <meta property="og:description" content="Supplier of solar panels, inverters, batteries, and electronics. Dawood Trader provides reliable trading & wholesale solutions." />
+  <meta property="og:type" content="business.business" />
+  <meta property="og:url" content="https://dawoodtrader.netlify.app" />
+  <meta property="og:image" content="https://dawoodtrader.netlify.app/Images/About-us-imag.png" />
+  
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Dawood Trader | Solar & Electronics Supplier" />
+  <meta name="twitter:description" content="Reliable trading in solar & electronics. Wholesale panels, batteries, inverters & more." />
+  <meta name="twitter:image" content="https://dawoodtrader.netlify.app/Images/About-us-imag.png" />
+  
 
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
