Half Images Updated

--- a/Type-Change-Braker.html
+++ b/Type-Change-Braker.html
@@ -66,42 +66,42 @@
               <div class="left-detail">
                 <img
                   id="main-img" 
-                  src="Images/Type-Change-Braker/1.jpg"
+                  src="https://ik.imagekit.io/dawoodtraders/dawoodTrader/Type-Change-Braker/1.jpg?updatedAt=1759060303980"
                   class="large-img mb-3"
                 />
 
                 <div class="small-img-row">
                   <div class="small-img-col">
                     <img
-                      src="Images/Type-Change-Braker/2.jpg"
+                      src="https://ik.imagekit.io/dawoodtraders/dawoodTrader/Type-Change-Braker/2.jpg?updatedAt=1759060303794"
                       width="100%"
                       class="small-img"
                     />
                   </div>
                   <div class="small-img-col">
                     <img
-                      src="Images/Type-Change-Braker/1.jpg"
+                      src="https://ik.imagekit.io/dawoodtraders/dawoodTrader/Type-Change-Braker/4.jpg?updatedAt=1759060303821"
                       width="100%"
                       class="small-img"
                     />
                   </div>
                   <div class="small-img-col">
                     <img
-                      src="Images/Type-Change-Braker/3.jpg"
+                      src="https://ik.imagekit.io/dawoodtraders/dawoodTrader/Type-Change-Braker/3.jpg?updatedAt=1759060303967"
                       width="100%"
                       class="small-img"
                     />
                   </div>
                   <div class="small-img-col">
                     <img
-                      src="Images/Type-Change-Braker/4.jpg"
+                      src="https://ik.imagekit.io/dawoodtraders/dawoodTrader/Type-Change-Braker/4.jpg?updatedAt=1759060303821"
                       width="100%"
                       class="small-img"
                     />
                   </div>
                   <div class="small-img-col">
                     <img
-                      src="Images/Type-Change-Braker/5.jpg"
+                      src="https://ik.imagekit.io/dawoodtraders/dawoodTrader/Type-Change-Braker/5.jpg?updatedAt=1759060303995"
                       width="100%"
                       class="small-img"
                     />
