--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="row justify-content-evenly mt-5 m-2">
           <div class="col-lg-3 col-md-6 col-sm-6 col-11">
             <div class="card shadow-sm">
-              <img src="Images/Dc-32-Breaker.png" alt="" />
+              <img src="https://ik.imagekit.io/dawoodtraders/Dc-32-Breaker.png?updatedAt=1759056896234" alt="" />
               <div class="inside-card">
                 <h4>
                   Tomzn DC Circuit Breakers – 2 Pole, 32A / 63A, / 125A, / 16A, / 25A, Solar & Inverter
@@ -116,7 +116,7 @@
             class="col-lg-3 col-md-6 col-sm-10 col-11 mt-4 mt-sm-3 mt-md-4 mt-lg-0"
           >
             <div class="card">
-              <img src="Images/Type-Change-Braker.png" alt="" />
+              <img src="https://ik.imagekit.io/dawoodtraders/Type-Change-Braker.png?updatedAt=1759056896344" alt="" />
               <div class="inside-card">
                 <h4>Tomzn AC Changeover Switch – 2 Pole, 63A</h4>
                 <h5>Reliable Circuit Changeover Breaker | 2 Pole, 63A"</h5>
@@ -137,7 +137,7 @@
             class="col-lg-3 col-md-6 col-sm-6 col-11 mt-4 mt-sm-0 mt-md-0 mt-lg-0"
           >
             <div class="card">
-              <img src="Images/Ac-32-Breaker.png" alt="" />
+              <img src="https://ik.imagekit.io/dawoodtraders/Ac-32-Breaker.png?updatedAt=1759056896001" alt="" />
               <div class="inside-card">
                 <h4>
                   Tomzn AC Circuit Breaker – 2 Pole, 32A / 63A, Solar & Inverter
@@ -163,7 +163,7 @@
 
           <div class="col-lg-3 col-md-6 col-sm-6 col-11">
             <div class="card shadow-sm">
-              <img src="Images/Relay-Protection.png" alt="" />
+              <img src="https://ik.imagekit.io/dawoodtraders/Relay-Protection.png?updatedAt=1759056896039" alt="" />
               <div class="inside-card">
                 <h4>
                   Digital Voltage Protection Relay | Solar & Inverter
@@ -185,7 +185,7 @@
 
            <div class="col-lg-3 col-md-6 col-sm-6 col-11">
             <div class="card shadow-sm">
-              <img src="Images/Electronic.png" alt="" />
+              <img src="https://ik.imagekit.io/dawoodtraders/Electronic.png?updatedAt=1759056896781" alt="" />
               <div class="inside-card">
                 <h4>
                  Crown Pump | 25W | EPSON Power Supply | 12V 10A | Slim Heat Gun | Gas Pressure Blower |
@@ -208,7 +208,7 @@
 
       <div class="col-lg-3 col-md-6 col-sm-6 col-11">
             <div class="card shadow-sm">
-              <img src="Images/DbBox.png" alt="" />
+              <img src="https://ik.imagekit.io/dawoodtraders/DbBox.png?updatedAt=1759056896779" alt="" />
               <div class="inside-card">
                 <h4>
                 Premium 8 Way Electrical Distribution Boxes – Tense, 7’s & SR Electric
@@ -327,7 +327,7 @@
 
                <div class="col-lg-5">
                   <div class="about-us-right">
-                      <img src="Images/About-us-imag.png" alt="" class="img-fluid">
+                      <img src="https://ik.imagekit.io/dawoodtraders/About-us-imag.png?updatedAt=1759056897852" alt="" class="img-fluid">
                   </div>
               </div>
           </div>
