More Images Commit

--- a/AC-Breaker-32-A-63-A-Details.html
+++ b/AC-Breaker-32-A-63-A-Details.html
@@ -24,13 +24,13 @@
   <meta property="og:description" content="Get Tomzn AC Breakers in 32A and 63A sizes from Dawood Trader – trusted supplier of electrical protection products." />
   <meta property="og:type" content="product" />
   <meta property="og:url" content="https://dawoodtrader.netlify.app/AC-Breaker-32-A-63-A-Details.html" />
-  <meta property="og:image" content="https://dawoodtrader.netlify.app/Images/About-us-imag.png" />
+  <meta property="og:image" content="https://dawoodtrader.netlify.app/https://ik.imagekit.io/dawoodtraders/About-us-imag.png?updatedAt=1759056897852" />
   
   <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Tomzn AC Breakers 32A & 63A | Dawood Trader" />
   <meta name="twitter:description" content="Reliable Tomzn AC Breakers 32A and 63A available at Dawood Trader for homes, offices, and industries." />
-  <meta name="twitter:image" content="https://dawoodtrader.netlify.app/Images/About-us-imag.png" />
+  <meta name="twitter:image" content="https://dawoodtrader.netlify.app/https://ik.imagekit.io/dawoodtraders/About-us-imag.png?updatedAt=1759056897852" />
   
 
       <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
