--- a/DC-Breaker-32-A-63-A-Details.html
+++ b/DC-Breaker-32-A-63-A-Details.html
@@ -23,13 +23,13 @@
   <meta property="og:description" content="Get original Tomzn DC Breakers – available in 16A, 25A, 32A, 63A and more at Dawood Trader. Trusted DC protection for solar systems." />
   <meta property="og:type" content="product" />
   <meta property="og:url" content="https://dawoodtrader.netlify.app/DC-Breaker-32-A-63-A-Details.html" />
-  <meta property="og:image" content="https://dawoodtrader.netlify.app/Images/About-us-imag.png" />
+  <meta property="og:image" content="https://dawoodtrader.netlify.app/https://ik.imagekit.io/dawoodtraders/About-us-imag.png?updatedAt=1759056897852" />
   
   <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Tomzn DC Breakers (16A, 25A, 32A, 63A) | Dawood Trader" />
   <meta name="twitter:description" content="Dawood Trader offers Tomzn DC Breakers in multiple sizes for solar and electrical use. Reliable & original products." />
-  <meta name="twitter:image" content="https://dawoodtrader.netlify.app/Images/About-us-imag.png" />
+  <meta name="twitter:image" content="https://dawoodtrader.netlify.app/https://ik.imagekit.io/dawoodtraders/About-us-imag.png?updatedAt=1759056897852" />
 
       <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
