--- a/Type-Change-Braker.html
+++ b/Type-Change-Braker.html
@@ -23,13 +23,13 @@
   <meta property="og:description" content="Dawood Trader supplies Tomzn AC and DC Changeover Switches for reliable electrical and solar power switching. Available in multiple ratings." />
   <meta property="og:type" content="product" />
   <meta property="og:url" content="https://dawoodtrader.netlify.app/Type-Change-Braker.html" />
-  <meta property="og:image" content="https://dawoodtrader.netlify.app/Images/About-us-imag.png" />
+  <meta property="og:image" content="https://dawoodtrader.netlify.app/https://ik.imagekit.io/dawoodtraders/About-us-imag.png?updatedAt=1759056897852" />
 
   <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Tomzn AC & DC Changeover Switch | Dawood Trader" />
   <meta name="twitter:description" content="Shop Tomzn AC & DC Changeover Switches at Dawood Trader – trusted supplier of electrical safety and solar switching solutions." />
-  <meta name="twitter:image" content="https://dawoodtrader.netlify.app/Images/About-us-imag.png" />
+  <meta name="twitter:image" content="https://dawoodtrader.netlify.app/https://ik.imagekit.io/dawoodtraders/About-us-imag.png?updatedAt=1759056897852" />
 
 
       <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
