--- a/dpBox.html
+++ b/dpBox.html
@@ -30,13 +30,13 @@
   <meta property="og:description" content="Buy DB Boxes (8 Way, 16 Way, 24 Way) from Dawood Trader – trusted supplier of electrical distribution boxes for homes and businesses." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://dawoodtrader.netlify.app/dpbox.html" />
-  <meta property="og:image" content="https://dawoodtrader.netlify.app/Images/About-us-imag.png" />
+  <meta property="og:image" content="https://dawoodtrader.netlify.app/https://ik.imagekit.io/dawoodtraders/About-us-imag.png?updatedAt=1759056897852" />
   
   <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="DB Boxes (8 Way, 16 Way, 24 Way) | Dawood Trader" />
   <meta name="twitter:description" content="Durable and high-quality DB Boxes – 8 Way, 16 Way, 24 Way available at Dawood Trader." />
-  <meta name="twitter:image" content="https://dawoodtrader.netlify.app/Images/About-us-imag.png" />
+  <meta name="twitter:image" content="https://dawoodtrader.netlify.app/https://ik.imagekit.io/dawoodtraders/About-us-imag.png?updatedAt=1759056897852" />
 
 
       <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
