--- a/electronic.html
+++ b/electronic.html
@@ -31,13 +31,13 @@
   <meta property="og:description" content="Find electronic products like cooler pumps, heat guns, soldering irons, wires, and tools at Dawood Trader – trusted supplier of quality electronics." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://dawoodtrader.netlify.app/electronic.html" />
-  <meta property="og:image" content="https://dawoodtrader.netlify.app/Images/About-us-imag.png" />
+  <meta property="og:image" content="https://dawoodtrader.netlify.app/https://ik.imagekit.io/dawoodtraders/About-us-imag.png?updatedAt=1759056897852" />
   
   <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Electronics Supply | Cooler Pumps, Heat Guns & More | Dawood Trader" />
   <meta name="twitter:description" content="Dawood Trader offers electronics like cooler pumps, heat guns, soldering tools, wires, and more at wholesale & retail prices." />
-  <meta name="twitter:image" content="https://dawoodtrader.netlify.app/Images/About-us-imag.png" />
+  <meta name="twitter:image" content="https://dawoodtrader.netlify.app/https://ik.imagekit.io/dawoodtraders/About-us-imag.png?updatedAt=1759056897852" />
   
 
       <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
