--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
   <meta property="og:description" content="Supplier of solar panels, inverters, batteries, and electronics. Dawood Trader provides reliable trading & wholesale solutions." />
   <meta property="og:type" content="business.business" />
   <meta property="og:url" content="https://dawoodtrader.netlify.app" />
-  <meta property="og:image" content="https://dawoodtrader.netlify.app/Images/About-us-imag.png" />
+  <meta property="og:image" content="https://dawoodtrader.netlify.app/https://ik.imagekit.io/dawoodtraders/About-us-imag.png?updatedAt=1759056897852" />
   
   <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Dawood Trader | Solar & Electronics Supplier" />
   <meta name="twitter:description" content="Reliable trading in solar & electronics. Wholesale panels, batteries, inverters & more." />
-  <meta name="twitter:image" content="https://dawoodtrader.netlify.app/Images/About-us-imag.png" />
+  <meta name="twitter:image" content="https://dawoodtrader.netlify.app/https://ik.imagekit.io/dawoodtraders/About-us-imag.png?updatedAt=1759056897852" />
   
 
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
