--- a/Relay-Protection.html
+++ b/Relay-Protection.html
@@ -30,13 +30,13 @@
   <meta property="og:description" content="Shop Relay Protection devices at Dawood Trader – Generic, OMAS, NIN Electric, Tomzn, and Entes relays available for safe electrical systems." />
   <meta property="og:type" content="product" />
   <meta property="og:url" content="https://dawoodtrader.netlify.app/Relay-Protection.html" />
-  <meta property="og:image" content="https://dawoodtrader.netlify.app/Images/About-us-imag.png" />
+  <meta property="og:image" content="https://dawoodtrader.netlify.app/https://ik.imagekit.io/dawoodtraders/About-us-imag.png?updatedAt=1759056897852" />
 
   <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Relay Protection Devices | Dawood Trader" />
   <meta name="twitter:description" content="Dawood Trader supplies protection relays: OMAS, NIN, Tomzn, Entes, and more for reliable voltage/current protection." />
-  <meta name="twitter:image" content="https://dawoodtrader.netlify.app/Images/About-us-imag.png" />
+  <meta name="twitter:image" content="https://dawoodtrader.netlify.app/https://ik.imagekit.io/dawoodtraders/About-us-imag.png?updatedAt=1759056897852" />
 
 
 
