--- a/AC-Breaker-32-A-63-A-Details.html
+++ b/AC-Breaker-32-A-63-A-Details.html
@@ -38,7 +38,7 @@
 <link rel="shortcut icon" href="/favicon.ico" />
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 <link rel="manifest" href="/site.webmanifest" />
-<link rel="shortcut icon" href="Images/logo.svg" type="image/x-icon">
+<link rel="shortcut icon" href="https://ik.imagekit.io/dawoodtraders/dawoodTrader/logo.svg?updatedAt=1759232765448" type="image/x-icon">
 
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
