Adding some update Commit

--- a/ac-breaker-32a-63a.html
+++ b/ac-breaker-32a-63a.html
@@ -103,7 +103,7 @@
                   </select>
 
                   <div class="main-btn mt-3">
-                    <a onclick="sendToWhatsApp()" href="Thank-You.html"
+                    <a onclick="sendToWhatsApp()" href="thank-you.html"
                       >Buy Now – Free Delivery</a
                     >
                   </div>
