--- a/changeover-breaker.html
+++ b/changeover-breaker.html
@@ -125,7 +125,7 @@
                 </div>
 
                  <div class="main-btn mt-2">
-                        <a onclick="sendToWhatsApp()" href="Thank-You.html">Buy Now Free Home Delivery</a>
+                        <a onclick="sendToWhatsApp()" href="thank-you.html">Buy Now Free Home Delivery</a>
                  </div>
                 <h2 class="mt-3">Product Detail</h2>
                 <p id="product-detail">
