--- a/electrical-products.html
+++ b/electrical-products.html
@@ -98,7 +98,7 @@
           </select>
 
          <div class="main-btn mt-3">
-                        <a onclick="sendToWhatsApp()" href="Thank-You.html">Buy Now – Free Delivery</a>
+                        <a onclick="sendToWhatsApp()" href="thank-you.html">Buy Now – Free Delivery</a>
                  </div>
           </div>
          
