--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                   </p>
                 </div>
                 <div class="main-btn">
-                        <a href="DC-Breaker-32-A-63-A-Details.html">See More Detail</a>
+                        <a href="dc-breaker-32a-63a-16a-25a-125a.html">See More Detail</a>
                  </div>
               </div>
             </div>
@@ -126,7 +126,7 @@
                   </p>
                 </div>
               <div class="main-btn">
-                        <a href="Type-Change-Braker.html">See More Detail</a>
+                        <a href="changeover-breaker.html">See More Detail</a>
                  </div>
               </div>
             </div>
@@ -150,7 +150,7 @@
                   </p>
                 </div>
                  <div class="main-btn">
-                        <a href="AC-Breaker-32-A-63-A-Details.html">See More Detail</a>
+                        <a href="ac-breaker-32a-63a.html">See More Detail</a>
                  </div>
               </div>
             </div>
@@ -176,7 +176,7 @@
                   </p>
                 </div>
                 <div class="main-btn">
-                        <a href="Relay-Protection.html">See More Detail</a>
+                        <a href="relay-protection-device.html">See More Detail</a>
                  </div>
               </div>
             </div>
@@ -197,7 +197,7 @@
                   </p>
                 </div>
                 <div class="main-btn">
-                        <a href="electronic.html">See More Detail</a>
+                        <a href="electrical-products.html">See More Detail</a>
                  </div>
               </div>
             </div>
@@ -220,7 +220,7 @@
                   </p>
                 </div>
                 <div class="main-btn">
-                        <a href="dpBox.html">See More Detail</a>
+                        <a href="distribution-box.html">See More Detail</a>
                  </div>
               </div>
             </div>
