More Update Commit Seo

--- a/ac-breaker-32a-63a.html
+++ b/ac-breaker-32a-63a.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tomzn AC Breakers 32A & 63A | Dawood Trader</title>
+    <title>AC Breaker 32A to 63A – High Quality Circuit Breakers</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,7 +23,7 @@
   <meta property="og:title" content="Tomzn AC Breakers 32A & 63A | Dawood Trader" />
   <meta property="og:description" content="Get Tomzn AC Breakers in 32A and 63A sizes from Dawood Trader – trusted supplier of electrical protection products." />
   <meta property="og:type" content="product" />
-  <meta property="og:url" content="https://dawoodtrader.netlify.app/AC-Breaker-32-A-63-A-Details.html" />
+  <meta property="og:url" content="https://dawoodtrader.netlify.app/ac-breaker-32a-63a.html" />
   <meta property="og:image" content="https://dawoodtrader.netlify.app/https://ik.imagekit.io/dawoodtraders/About-us-imag.png?updatedAt=1759056897852" />
   
   <!-- Twitter Cards -->
