--- a/changeover-breaker.html
+++ b/changeover-breaker.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tomzn AC & DC Changeover Switch | Dawood Trader</title>
+    <title>Changeover Breaker – Automatic & Manual Type</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -12,8 +12,8 @@
     />
 
      <!-- SEO Meta Tags -->
-  <meta name="description" content="Buy Tomzn AC and DC Changeover Switches from Dawood Trader. Reliable switch breakers for home, solar systems, and industrial electrical safety." />
-  <meta name="keywords" content="Dawood Trader, Tomzn Changeover Switch, Tomzn AC Changeover, Tomzn DC Changeover, Changeover Breaker, AC DC Changeover Switch, Electrical Changeover, Solar Changeover Switch" />
+  <meta name="description" content="Shop high-quality changeover breakers for smooth power switching. Available in automatic and manual types for homes and industries." />
+  <meta name="keywords" content="Dawood Trader, Tomzn Changeover Switch, Tomzn AC Changeover, Tomzn DC Changeover, Changeover Breaker, AC DC Changeover Switch, Electrical Changeover, Solar Changeover Switch,changeover breakers" />
   <meta name="author" content="Dawood Trader" />
   <meta name="robots" content="index, follow" />
   <meta name="language" content="en" />
@@ -22,7 +22,7 @@
   <meta property="og:title" content="Tomzn AC & DC Changeover Switch | Dawood Trader" />
   <meta property="og:description" content="Dawood Trader supplies Tomzn AC and DC Changeover Switches for reliable electrical and solar power switching. Available in multiple ratings." />
   <meta property="og:type" content="product" />
-  <meta property="og:url" content="https://dawoodtrader.netlify.app/Type-Change-Braker.html" />
+  <meta property="og:url" content="https://dawoodtrader.netlify.app/changeover-breaker.html" />
   <meta property="og:image" content="https://dawoodtrader.netlify.app/https://ik.imagekit.io/dawoodtraders/About-us-imag.png?updatedAt=1759056897852" />
 
   <!-- Twitter Cards -->
