--- a/distribution-box.html
+++ b/distribution-box.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DB Boxes (8 Way, 16 Way, 24 Way) | Dawood Trader</title>
+    <title>Buy Electrical Distribution Box – Safe & Durable DP Box</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,8 +19,8 @@
     />
 
     <!-- SEO Meta Tags -->
-  <meta name="description" content="Dawood Trader supplies high-quality DB Boxes including 8 Way, 16 Way, 24 Way, and more. Durable distribution boxes for electrical systems at wholesale prices." />
-  <meta name="keywords" content="Dawood Trader, DB Box, Distribution Box, 8 Way DB Box, 16 Way DB Box, 24 Way DB Box, Electrical Distribution Box, Circuit Breaker Box, Electrical Supplier" />
+  <meta name="description" content="Dawood Trader supplies high-quality distribution boxes (DP Box) including 8 Way, 12 way, 16 Way, 24 Way, and more. Durable distribution boxes for electrical systems at wholesale prices." />
+  <meta name="keywords" content="Dawood Trader, db Box, Distribution Box, 8 Way db Box, 16 Way db Box, 24 Way db Box, Electrical Distribution Box, Circuit Breaker Box, Electrical Supplier" />
   <meta name="author" content="Dawood Trader" />
   <meta name="robots" content="index, follow" />
   <meta name="language" content="en" />
@@ -29,7 +29,7 @@
   <meta property="og:title" content="DB Boxes (8 Way, 16 Way, 24 Way) | Dawood Trader" />
   <meta property="og:description" content="Buy DB Boxes (8 Way, 16 Way, 24 Way) from Dawood Trader – trusted supplier of electrical distribution boxes for homes and businesses." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://dawoodtrader.netlify.app/dpbox.html" />
+  <meta property="og:url" content="https://dawoodtrader.netlify.app/distribution-box.html" />
   <meta property="og:image" content="https://dawoodtrader.netlify.app/https://ik.imagekit.io/dawoodtraders/About-us-imag.png?updatedAt=1759056897852" />
   
   <!-- Twitter Cards -->
