--- a/electrical-products.html
+++ b/electrical-products.html
@@ -30,7 +30,7 @@
   <meta property="og:title" content="Electronics Supply | Cooler Pumps, Heat Guns & More | Dawood Trader" />
   <meta property="og:description" content="Find electronic products like cooler pumps, heat guns, soldering irons, wires, and tools at Dawood Trader – trusted supplier of quality electronics." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://dawoodtrader.netlify.app/electronic.html" />
+  <meta property="og:url" content="https://dawoodtrader.netlify.app/electrical-products.html" />
   <meta property="og:image" content="https://dawoodtrader.netlify.app/https://ik.imagekit.io/dawoodtraders/About-us-imag.png?updatedAt=1759056897852" />
   
   <!-- Twitter Cards -->
