--- a/relay-protection-device.html
+++ b/relay-protection-device.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Relay Protection | Dawood Trader</title>
+    <title>Relay Protection Devices – Reliable Electrical Safety</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -29,7 +29,7 @@
   <meta property="og:title" content="Relay Protection Devices | Dawood Trader" />
   <meta property="og:description" content="Shop Relay Protection devices at Dawood Trader – Generic, OMAS, NIN Electric, Tomzn, and Entes relays available for safe electrical systems." />
   <meta property="og:type" content="product" />
-  <meta property="og:url" content="https://dawoodtrader.netlify.app/Relay-Protection.html" />
+  <meta property="og:url" content="https://dawoodtrader.netlify.app/relay-protection-device.html" />
   <meta property="og:image" content="https://dawoodtrader.netlify.app/https://ik.imagekit.io/dawoodtraders/About-us-imag.png?updatedAt=1759056897852" />
 
   <!-- Twitter Cards -->
