--- a/dc-breaker-32a-63a-16a-25a-125a.html
+++ b/dc-breaker-32a-63a-16a-25a-125a.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tomzn DC Breakers (16A, 25A, 32A, 63A) | Dawood Trader</title>
+    <title>DC Breaker 32A to 63A – Reliable Electrical Protection</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,7 +22,7 @@
   <meta property="og:title" content="Tomzn DC Breakers (16A, 25A, 32A, 63A) | Dawood Trader" />
   <meta property="og:description" content="Get original Tomzn DC Breakers – available in 16A, 25A, 32A, 63A and more at Dawood Trader. Trusted DC protection for solar systems." />
   <meta property="og:type" content="product" />
-  <meta property="og:url" content="https://dawoodtrader.netlify.app/DC-Breaker-32-A-63-A-Details.html" />
+  <meta property="og:url" content="https://dawoodtrader.netlify.app/dc-breaker-32a-63a-16a-25a-125a.html" />
   <meta property="og:image" content="https://dawoodtrader.netlify.app/https://ik.imagekit.io/dawoodtraders/About-us-imag.png?updatedAt=1759056897852" />
   
   <!-- Twitter Cards -->
